--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span>R</span>onaldo</a>
+	      <a class="navbar-brand" href="index.html"><span>S</span>idhi</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -37,9 +37,9 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	          <!--<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>-->
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	         <!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>-->
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -52,12 +52,12 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
-		  				<h1>Ronaldo Fredrickson</h1>
+		  				<h1>Sidhi Agarwal</h1>
 			  				<h2>I'm a 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "Developer.", "Photographer.", "Marketer.", "Blogger" ]'></span>
+								     data-rotate='[ "Data Analyst.","Web Designer.", "Entrepreneur." ]'></span>
 								</h2>
 							</div>
             </div>
@@ -88,12 +88,10 @@
 		            <h2 class="mb-4">About Me</h2>
 		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Ronaldo Fredrickson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>November 28, 1989</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>ronaldo@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Sidhi Agarwal</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>January 31, 2000</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>sidhiagarwal31@gmail.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>7905423116</span></li>
 		            </ul>
 		          </div>
 		        </div>
@@ -154,9 +152,9 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Bachelor of Science in Computer Science</h2>
-		    					<span class="position">Cambridge University</span>
+		    					<span class="date">2018-2021</span>
+								<h2>Bachelor of Computer Application [Data Analysis] </h2>
+		    					<span class="position">Kristu Jayanti College</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 	    					</div>
 	    				</div>
@@ -165,9 +163,9 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Computer Processing Systems/Computer Software</h2>
-		    					<span class="position">Cambridge University</span>
+		    					<span class="date">2020</span>
+		    					<h2>Nanodegree Of Data Analyst</h2>
+		    					<span class="position">Udacity</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		    				</div>
 	    				</div>
@@ -202,7 +200,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">2019</span>
 		    					<h2>Software Developer</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
@@ -436,8 +434,8 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Top 10 Web Developer</h2>
+		    					<span class="date">2020</span>
+		    					<h2>Young Entrepreneur Award</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 	    					</div>
@@ -480,7 +478,7 @@
 			  </div>
     	</div>
     </section>
-
+<!--
     <section class="ftco-section" id="services-section">
     	<div class="container-fluid px-md-5">
     		<div class="row justify-content-center py-5 mt-5">
@@ -562,7 +560,7 @@
     	</div>
     </section>
  
-
+-->
     <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
@@ -671,7 +669,7 @@
       </div>
     </section>
 
-
+<!--
     <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -736,7 +734,7 @@
         </div>
       </div>
     </section>
-
+-->
     <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
     	<div class="overlay"></div>
 			<div class="container">
