--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Analyst.","Web Designer.", "Entrepreneur." ]'></span>
+								     data-rotate='[ "Data Analyst.","Web Designer.", "ML Enthusiast.","Entrepreneur." ]'></span>
 								</h2>
 							</div>
             </div>
@@ -91,7 +91,7 @@
 		            	<li class="d-flex"><span>Name:</span> <span>Sidhi Agarwal</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 31, 2000</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>sidhiagarwal31@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>7905423116</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+91-7905423116</span></li>
 		            </ul>
 		          </div>
 		        </div>
@@ -140,7 +140,8 @@
 					      <li><a href="#page-1">Education</a></li>
 					      <li><a href="#page-2">Experience</a></li>
 					      <li><a href="#page-3">Skills</a></li>
-					      <li><a href="#page-4">Awards</a></li>
+						  <li><a href="#page-4">Awards</a></li>
+						  <!--<li><a href="#page-5">Projects</a></li>-->
 					    </ul>
 					  </nav>
 					</div>
@@ -154,10 +155,12 @@
 					    	<div class="text pl-3">
 		    					<span class="date">2018-2021</span>
 								<h2>Bachelor of Computer Application [Data Analysis] </h2>
-		    					<span class="position">Kristu Jayanti College</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="position">Kristu Jayanti College Autonomous,Bangalore</span>
+		    					<p>Won numerous accolades in inter-collegiate IT and cultural fests. Student Co-ordinator of Computer Science Department [UG] also volunteered for numerous college events. Contributed to numerous college software project by conceptualizing
+									ideas and implementation. Certified in Life skills.</p>
 	    					</div>
-	    				</div>
+						</div>
+						<!--
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -168,16 +171,17 @@
 		    					<span class="position">Udacity</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		    				</div>
-	    				</div>
+	    				</div>-->
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Diploma in Computer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2017-2018</span>
+		    					<h2>Class 12th</h2>
+		    					<span class="position">U.P.Kirana, UP</span>
+		    					<p>Graduated in PCMC with 91%. Held office positions, facilitated
+									seminars and other cultural events.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -185,10 +189,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Art &amp; Creative Director</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2015-2016</span>
+		    					<h2>Class 10th</h2>
+		    					<span class="position">U.P.Kirana, UP</span>
+		    					<p>Graduated in ICSE Board with 89.7%.</p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -201,9 +205,11 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2019</span>
-		    					<h2>Software Developer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<h2>Entrepreneur</h2>
+		    					<!--<span class="position">Cambridge University</span>-->
+		    					<p>Founded a startup named ‘Craffiti box’ in Art and Craft area to explore my 
+									Innovation, Creativity, Leadership and Imagination for the betterment of Society.
+									</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -278,7 +284,7 @@
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -286,7 +292,7 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">20%</div><span class="small text-gray">Last week</span>
 						          </div>
 						          <div class="col-6">
 						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
@@ -309,7 +315,7 @@
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -317,10 +323,10 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">25%</div><span class="small text-gray">Last week</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">65%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -329,7 +335,7 @@
 
 						    <div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">Python</h2>
 
 						        <!-- Progress bar 1 -->
 						        <div class="progress mx-auto" data-value='75'>
@@ -436,8 +442,10 @@
 					    	<div class="text pl-3">
 		    					<span class="date">2020</span>
 		    					<h2>Young Entrepreneur Award</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<!--<span class="position">Cambridge University</span>-->
+		    					<p>Won ‘Young Entrepreneur’ award for showcasing the idea that nothing matches the worth of a gift that is hand-made with love, conducted at Kanyakumari, Tamil Nadu.
+
+								</p>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -560,7 +568,7 @@
     	</div>
     </section>
  
--->
+
     <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
@@ -669,7 +677,7 @@
       </div>
     </section>
 
-<!--
+
     <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -734,7 +742,7 @@
         </div>
       </div>
     </section>
--->
+
     <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
     	<div class="overlay"></div>
 			<div class="container">
@@ -747,7 +755,7 @@
 				</div>
 			</div>
 		</section>
-
+	-->
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
@@ -766,7 +774,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p>128/200 Y Block Kanpur, UP, India</p>
 		          </div>
 	          </div>
           </div>
@@ -777,7 +785,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><a href="tel://1234567920">7905423116</a></p>
 	            </div>
 	          </div>
           </div>
@@ -788,7 +796,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+		            <p><a href="mailto:info@yoursite.com">sidhiagarwal31@gmail.com</a></p>
 		          </div>
 	          </div>
           </div>
@@ -799,12 +807,12 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">yoursite.com</a></p>
+		            <p><a href="#">craffitibox.com</a></p>
 	            </div>
 	          </div>
           </div>
         </div>
-
+<!--
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form">
@@ -889,15 +897,14 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <p>  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>
           </div>
         </div>
-      </div>
+      </div> -->
     </footer>
-    
-  
+
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
@@ -920,3 +927,7 @@
     
   </body>
 </html>
+
+<!--http://anshumansingh.ml/-->
+
+<!-- https://github.com/MysteriousAcadia/notAnshuman/blob/master/index.html -->
