--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2019</span>
-		    					<h2>Entrepreneur</h2>
+		    					<h2>Craffiti Box</h2>
 		    					<!--<span class="position">Cambridge University</span>-->
 		    					<p>Founded a startup named ‘Craffiti box’ in Art and Craft area to explore my 
 									Innovation, Creativity, Leadership and Imagination for the betterment of Society.
@@ -514,10 +514,11 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">3rd February,2020</span>
 		    					<h2>Vision 3D</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<!--<span class="position">Cambridge University</span>-->
+		    					<p>A fusion of Augmented Reality and Image Recognition to create a digitally interactive learning experience. Won third place in Galaxia 2020.
+									Technology stack – Unity, Flutter, Vuforia</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
