--- a/index.html
+++ b/index.html
@@ -221,61 +221,7 @@
 									</p>
 		    				</div>
 	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Web Designer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Web Marketing</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Art &amp; Creative Director</h2>
-		    					<span class="position">Side Tech</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Wordpress Developer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2017-2018</span>
-		    					<h2>UI/UX Designer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
+	    				
 					  </div>
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
@@ -462,10 +408,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Top 5 LeaderShip Exellence Winner</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2020</span>
+		    					<h2>Galaxia 2020</h2>
+		    					<!-- <span class="position">Cambridge University</span> -->
+		    					<p>Received 3rd prize for showcasing ‘Vision-3D’ in a national project exhibition, conducted at Kristu Jayanti College.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -473,21 +419,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Top 4 Web Tester</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Art &amp; Creative Director</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2019-2020</span>
+		    					<h2>KalaJyothi</h2>
+		    					<!-- <span class="position">Cambridge University</span> -->
+		    					<p>Secured 2nd position in literary and cultural competition held at Kristu Jayanti College, Bangalore for 2 consecutive years.</p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -502,10 +437,9 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2020</span>
-		    					<h2>Synchronize 2020</h2>
+		    					<h2>Vision 3-D</h2>
 		    					<!--<span class="position">Cambridge University</span>-->
-		    					<p>Won ‘Young Entrepreneur’ award for showcasing the idea that nothing matches the worth of a gift that is hand-made with love, conducted at Kanyakumari, Tamil Nadu.
-
+		    					<p>A fusion of Augmented Reality and Image Recognition to create a digitally interactive learning experience. Technology stack – Unity, Flutter, Vuforia.
 								</p>
 	    					</div>
 	    				</div>
@@ -514,11 +448,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">3rd February,2020</span>
-		    					<h2>Vision 3D</h2>
+		    					<span class="date">2019</span>
+		    					<h2>Artsy Lens</h2>
 		    					<!--<span class="position">Cambridge University</span>-->
-		    					<p>A fusion of Augmented Reality and Image Recognition to create a digitally interactive learning experience. Won third place in Galaxia 2020.
-									Technology stack – Unity, Flutter, Vuforia</p>
+		    					<p>This system can automate the most voted photographers. Provides a good opportunity to new photographers to publish their work and get recognized.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -526,10 +459,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>3rd sem project</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2021</span>
+		    					<h2>Personal Assistant</h2>
+		    					<!-- <span class="position">Cambridge University</span> -->
+		    					<p>An online web application used to manage personal details and provide Calendar with Alerts. Discussion portal where users can share their views on a topic.</p>
 		    				</div>
 	    				</div>
 	    				<!-- <div class="resume-wrap d-flex ftco-animate">
@@ -811,9 +744,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>Please <span>Change </span> the image</h2>
-						<p>Put your faviorite quote or something</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<h2>“Those who are <span>crazy</span> enough to think they can change the world usually do.”</h2>
+						<p>- Steve Jobs</p>
 					</div>
 				</div>
 			</div>
