--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 		            </ul>
 		          </div>
 		        </div>
-	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
+	          <!--<div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
-              </div>
+              </div>-->
 	          </div>
 	        </div>
         </div>
@@ -317,7 +317,7 @@
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">85<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -325,7 +325,7 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">20%</div><span class="small text-gray">Last week</span>
 						          </div>
 						          <div class="col-6">
 						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
@@ -338,10 +338,32 @@
 					  	<div class="row">
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Photoshop</h3>
+										<h3>C</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										    <span>80%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>R</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+										    <span>80%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Java</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
 										    <span>90%</span>
 										  	</div>
 										</div>
@@ -349,10 +371,10 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>jQuery</h3>
+										<h3>Python</h3>
 										<div class="progress">
-										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 										    <span>85%</span>
 										  	</div>
 										</div>
@@ -360,29 +382,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>HTML5</h3>
-										<div class="progress">
-										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-										    <span>95%</span>
-										  	</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 animate-box">
-									<div class="progress-wrap ftco-animate">
-										<h3>CSS3</h3>
-										<div class="progress">
-										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>90%</span>
-										  	</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 animate-box">
-									<div class="progress-wrap ftco-animate">
-										<h3>WordPress</h3>
+										<h3>Photoshop</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -393,7 +393,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>SEO</h3>
+										<h3>PHP</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
