--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>A highly dedicated and goal-oriented individual who is seeking a position in a challenging environment in order to utilize extensive skills in Data Analysis.
+					To describe myself, I would say, I'm self-motivated,organised,enthusiastic and creative learner. An active member of ACM-W and Data Science Society.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sidhi Agarwal</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 31, 2000</span></li>
